# JSFDataReader

./: .travis.yml  PyJSF.py  README.md  setup.cfg  setup.py
JSFDataReader/io/: __init__.py  data.py
pyjsf/: __init__.py  core.py
pyjsf/data/: download.py  jsfurl.py
pyjsf/example/: tutorial_jsf.ipynb
tests/: test_jsf.py
