[metadata]
name = JSFDataReader
version = 0.0.3
url = https://github.com/sawadyrr5/JSFDataReader
author = sawady
author_email = riskreturn5@gmail.com
license = file: LICENSE
description = Download loans for margin transaction data from taisyaku.jp
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
install_requires =
    pandas
    pandas_datareader
zip_safe = False
packages = find: